--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         
       <section class="section">
         <div class="container">
-        <h2 hidden>Main</h2>
+        <h2 class="hidden">Main</h2>
         <ul class="list">
           <li><h3 class="section-two">Strategy</h3>
             <p class="section-two-text">
@@ -152,11 +152,13 @@
     
     </main>
     <footer class="footer">
+      <div class="container">
         <a href="./index.html" class="logo">WEB<span class="logo-studio">Studio</span></a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
+    </div>
     </footer>
   </body>
 </html>
