--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
   </head>
   <body>
     <header class="header-content">
-      <div class="container">
-        <div class="container-head">
+      <div class="container container-head">
       <nav class="nav-size">
         <a href="./index.html" class="logo">WEB<span class="logo-studio">Studio</span></a>
         <ul class="navigation-list">
@@ -28,8 +27,7 @@
           <li><a class="navigation-address" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
-    </div>
-    </div>
+      </div>
     </header>
       <main>
        
