--- a/index.html
+++ b/index.html
@@ -41,24 +41,24 @@
         
       <section class="section">
         <div class="container">
-        <h2 class="hidden">Main</h2>
+        <h2 class="visually-hidden">Main</h2>
         <ul class="list">
-          <li><h3 class="section-two">Strategy</h3>
+          <li class="section-two-list"><h3 class="section-two">Strategy</h3>
             <p class="section-two-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p></li>
-          <li><h3 class="section-two">Punctuality</h3>
+          <li class="section-two-list"><h3 class="section-two">Punctuality</h3>
             <p class="section-two-text">
               Bring the key message to the brand's audience for the best price within
               the shortest possible time.
             </p></li>
-          <li><h3 class="section-two">Diligence</h3>
+          <li class="section-two-list"><h3 class="section-two">Diligence</h3>
             <p class="section-two-text">
               Research and confirm brands that present the strongest digital growth
               opportunities and minimize risk.
             </p></li>
-          <li><h3 class="section-two">Technologies</h3>
+          <li class="section-two-list"><h3 class="section-two">Technologies</h3>
             <p class="section-two-text">
               Design practice focused on digital experiences. We bring forth a deep
               passion for problem-solving.
