--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="logo">WEB<span class="logo-studio">Studio</span></a>
+        <a href="./index.html" class="logo-foot">WEB<span class="logo-studio-foot">Studio</span></a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
