--- a/index.html
+++ b/index.html
@@ -131,29 +131,37 @@
         
         <ul class="portfolio">
           <li class="portfolio-list"><img src="./images/img11.jpg" alt="Bank App" width="360">
-           <h3 class="section-four-main">Banking App</h3>
+           <div class="app">
+            <h3 class="section-four-main">Banking App</h3>
            <p class="section-four-text">App</p>
+          </div>
           </li>
           <li class="portfolio-list"><img src="./images/img22.jpg" alt="Cash Payment" width="360">
+            <div class="app">
             <h3 class="section-four-main">Cashless Payment</h3>
             <p class="section-four-text">Marketing</p></li>
-
+          </div>
           <li class="portfolio-list"><img src="./images/img33.jpg" alt="Meditation App" width="360">
+            <div class="app">
             <h3 class="section-four-main">Meditation App</h3>
             <p class="section-four-text">App</p></li>
-
+          </div>
           <li class="portfolio-list"><img src="./images/img44.jpg" alt="Taxi" width="360">
+            <div class="app">
             <h3 class="section-four-main">Taxi Service</h3>
             <p class="section-four-text">Marketing</p></li>
-
+          </div>
           <li class="portfolio-list"><img src="./images/img55.jpg" alt="Screen" width="360">
+            <div class="app">
             <h3 class="section-four-main">Screen Illustrations</h3>
             <p class="section-four-text">Design</p></li>
-
+          </div>
           <li class="portfolio-list"><img src="./images/img66.jpg" alt="Online Cours" width="360">
+            <div class="app">
             <h3 class="section-four-main">Online Courses</h3>
             <p class="section-four-text">Marketing</p></li>
-        </ul>
+          </div>
+          </ul>
       
       </div>
       </section>
