--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
           <li class="portfolio-list"><img src="./images/img66.jpg" alt="Online Cours" width="360">
             <div class="app">
             <h3 class="section-four-main">Online Courses</h3>
-            <p class="section-four-text">Marketing</p>
+            <p class="section-four-text">Marketing</p></li>
           </div>
-          </li>
+          
           </ul>
       
       </div>
