--- a/index.html
+++ b/index.html
@@ -160,14 +160,15 @@
           <li class="portfolio-list"><img src="./images/img55.jpg" alt="Screen" width="360">
             <div class="app">
             <h3 class="section-four-main">Screen Illustrations</h3>
-            <p class="section-four-text">Design</p></li>
+            <p class="section-four-text">Design</p>
           </div>
+        </li>
           <li class="portfolio-list"><img src="./images/img66.jpg" alt="Online Cours" width="360">
             <div class="app">
             <h3 class="section-four-main">Online Courses</h3>
-            <p class="section-four-text">Marketing</p></li>
+            <p class="section-four-text">Marketing</p>
           </div>
-          
+        </li>
           </ul>
       
       </div>
